--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        path: repo/
+
+    - name: Log Folder Structure
+      run: |
+        echo "Folder structure:"
+        ls -R
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
@@ -22,6 +29,11 @@ jobs:
       run: |
         dotnet new console -n GTweens
         cd GTweens
+
+    - name: Log Folder Structure
+      run: |
+        echo "Folder structure:"
+        ls -R
 
     - name: Copy repository contents to project
       run: |
