--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         dotnet add package NUnit
 
     - name: Build
-      run: dotnet build --configuration Release
+      run: dotnet build GTweens.csproj --configuration Release
 
     - name: Test
-      run: dotnet test --configuration Release --no-restore
+      run: dotnet test GTweens.csproj --configuration Release --no-restore
