--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,11 +53,11 @@ jobs:
     - name: Build
       run: |
         cd GTweens
-        dotnet build GTweens.csproj --configuration Release -define GTWEENS_TESTS
+        dotnet build GTweens.csproj --configuration Release /p:DefineConstants=GTWEENS_TESTS
         cd ..
 
     - name: Test
       run: |
         cd GTweens
-        dotnet test GTweens.csproj --configuration Release -define GTWEENS_TESTS --no-restore 
+        dotnet test GTweens.csproj --configuration Release --no-restore /p:DefineConstants=GTWEENS_TESTS
         cd ..
