--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,5 @@ jobs:
     - name: Test
       run: |
         cd GTweens
-        dotnet test GTweens.csproj --configuration Release --no-restore /p:DefineConstants=GTWEENS_TESTS | tee test-results.txt
-        echo "Test Results:"
-        cat test-results.txt
+        dotnet test GTweens.csproj --configuration Release --no-restore /p:DefineConstants=GTWEENS_TESTS --verbosity
         cd ..
