--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Create C# project
       run: |
-        dotnet new console -n GTweens
+        dotnet new nunit -n GTweens
         cd GTweens
 
     - name: Log Folder Structure
@@ -53,7 +53,7 @@ jobs:
     - name: Build
       run: |
         cd GTweens
-        dotnet build GTweens.csproj --configuration Release /p:DefineConstants=GTWEENS_TESTS
+        dotnet build GTweens.csproj --configuration Release /p:DefineConstants=GTWEENS_TESTS 
         cd ..
 
     - name: Test
